--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "TOKEN_BOT",
-    "adminIDs": ["ID_USER_ADMIN"],
-    "guildID": "ID_SERVER"
+    "token": "process.env.TOKEN",
+    "adminIDs": ["318801041019764736"],
+    "guildID": "936025072873898054"
 }
